--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Switchify</string>
+    <string name="accessibility_service_description">Switchify enables you to use your device with adaptive switches. It scans your screen, allowing you to select a point to tap. You can also swipe, and do everything else you need to navigate your device. Note: before enabling Switchify, you must first add at least one switch in the app.</string>
 </resources>
