--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
 
     <string name="app_description">Switchify enables you to use your device with adaptive switches. It scans your screen, allowing you to select a point to tap. You can also swipe, and do everything else you need to navigate your device. It also includes an item scan feature that allows you to navigate through items on your screen.</string>
 
-    <string name="accessibility_service_description">Switchify enables you to use your device with adaptive switches. It scans your screen, allowing you to select a point to tap. You can also swipe, and do everything else you need to navigate your device. It also includes an item scan feature that allows you to navigate through items on your screen. Note: before enabling Switchify, you must first add at least one switch in the app.</string>
+    <string name="accessibility_service_description">Switchify makes it easy to control your device with adaptive switches. It scans the screen, letting you tap, swipe, and navigate effortlessly.</string>
 
-    <string name="accessibility_service_disclosure">Switchify is an accessibility service. It allows you to use your device with adaptive switches. It scans your screen, allowing you to select a point to tap. You can also swipe, and do everything else you need to navigate your device. To do this, Switchify requires the ability to perform gestures, such as taps and swipes, and to observe the content of your screen to determine where to perform these gestures. It also includes an item scan feature that allows you to navigate through items on your screen.</string>
+    <string name="accessibility_service_disclosure">Switchify is an accessibility service. It makes it easy to control your device with adaptive switches. It scans the screen, letting you tap, swipe, and navigate effortlessly. To do this, Switchify requires the ability to perform gestures, such as taps and swipes, and to observe the content of your screen to determine where to perform these gestures.</string>
 
     <string name="ime_name">Switchify Keyboard</string>
 </resources>
